--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
 		<link rel="stylesheet" type="text/css" href='{% static "css/style.css" %}'>
 		<link rel="stylesheet" type="text/css" href='{% static "css/loader.css" %}'>
 
-		<link rel="icon" href='{% static "img/favicon.png" %}'>
+		<link rel="icon" href="{% static 'img/favicon.png' %}">
 
 		<!--[if lt IE 9]>
   <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -38,7 +38,7 @@
 						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
           <i class="fa fa-bars"></i>
         </button>
-						<a class="navbar-brand" href="home.html"><img src='{% static "images/logo-white.png" %}' alt="logo" class="logo logo-display">
+						<a class="navbar-brand" href=""><img src='{% static "images/logo-white.png" %}' alt="logo" class="logo logo-display">
 							<img src="{% static 'img/logo.png' %}" class="logo logo-scrolled" alt="logo">
 						</a>
 					</div>
