--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
 		<title>{%block title%}{%endblock%}</title>
 		<link rel="stylesheet" type="text/css" href='{% static "css/bootstrap.min.css" %}'>
 		<link rel="stylesheet" type="text/css" href='{% static "css/font-awesome.min.css" %}'>
-		<link rel="stylesheet" type="text/css" href='{% static "css/edua-icons.css" %}'>
+		<link rel="stylesheet" type="text/css" href="{% static 'css/edua-icons.css' %}">
 		<link rel="stylesheet" type="text/css" href='{% static "css/animate.min.css" %}'>
 		<link rel="stylesheet" type="text/css" href='{% static "css/owl.carousel.css" %}'>
 		<link rel="stylesheet" type="text/css" href='{% static "css/owl.transitions.css" %}'>
@@ -38,14 +38,14 @@
 						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
           <i class="fa fa-bars"></i>
         </button>
-						<a class="navbar-brand" href=""><img src='{% static "images/logo-white.png" %}' alt="logo" class="logo logo-display">
+						<a class="navbar-brand" href=""><img src='{% static "img/logo-white.png" %}' alt="logo" class="logo logo-display">
 							<img src="{% static 'img/logo.png' %}" class="logo logo-scrolled" alt="logo">
 						</a>
 					</div>
 					<div class="collapse navbar-collapse" id="navbar-menu">
 						<ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOut">
 							<li>
-								<a href="home.html">首页</a>
+								<a href="{% url 'home' %}">首页</a>
 							</li>
 							<li class="dropdown">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown">课程</a>
@@ -63,9 +63,6 @@
 							</li>
 							<li class="dropdown">
 								<a href="tool_display.html" class="dropdown-toggle" data-toggle="dropdown">网络运维工具集</a>
-							</li>
-							<li>
-								<a href="login.html">登录/注册</a>
 							</li>
 						</ul>
 					</div>
