添加了登录功能和登录页面，登录成功后跳转到首页

--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -5,6 +5,7 @@
 <meta charset="utf-8" />
 <title>快乐学python登录页面</title>
 <link rel="stylesheet" type="text/css" href="{% static "css/styleDenglu.css" %}">
+    <link rel="stylesheet" type="text/css" href='{% static "css/bootstrap.min.css" %}'>
 </head>
 <script src="{% static "js/jquery-1.12.4.min.js"%}" type="text/javascript" charset="utf-8"></script>
 	<script src="{% static "js/register.js"%}"></script>
@@ -13,17 +14,26 @@
 	<a href="#" class="logo"></a>
 	<div class="desc">登录</div>
 </header>
-<form action="index.html">
+<form action="" method="post">
+    {% csrf_token %}
 		<div class="register-box">
 			<label >用 户 名
-			<input maxlength="20" type="text" placeholder="您的用户名和登录名">
+			<input maxlength="20" name="username" type="text" placeholder="您的用户名和登录名">
 					</label>
 		</div>
 		<div class="register-box">
             <label >密    &nbsp; &nbsp; 码
-			<input maxlength="20" type="text" placeholder="密码">
+			<input maxlength="20" name="password" type="password" placeholder="密码">
 					</label>
 		</div>
+    <div class="register-box">
+				<label for="username" class="other_label">验 证 码
+			<input maxlength="20" type="text" placeholder="请输入验证码">
+			</label>
+				<span id="code"></span>
+				<div class="tips">
+				</div>
+			</div>
 		<div class="submit_btn">
 			<button type="submit" id="login_submit_btn">登   录</button>
 			<a href="{% url 'register' %}">立即注册？</a>
