--- a/templates/login/register.html
+++ b/templates/login/register.html
@@ -49,7 +49,7 @@
 			</div>
 			<div class="register-box">
 				<label for="username" class="other_label">确 认 密 码
-			<input maxlength="20" type="password" placeholder="请再次输入密码">
+			<input maxlength="20" name="password2" type="password" placeholder="请再次输入密码">
 			</label>
 				<div class="tips">
 
@@ -75,7 +75,7 @@
 			</div>
 			<div class="register-box">
 				<label for="username" class="other_label">验 证 码
-			<input maxlength="20" type="text" placeholder="请输入验证码">
+			<input maxlength="20" name="identify" type="text" placeholder="请输入验证码">
 			</label>
 				<span id="code"></span>
 				<div class="tips">
