--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -7,36 +7,54 @@
 <link rel="stylesheet" type="text/css" href="{% static "css/styleDenglu.css" %}">
 </head>
 <script src="{% static "js/jquery-1.12.4.min.js"%}" type="text/javascript" charset="utf-8"></script>
-	<script src="{% static "js/register.js"%}"></script>
+	<script src="{% static "js/login.js"%}"></script>
 <body>
     <header>
 	<a href="#" class="logo"></a>
 	<div class="desc">登录</div>
 </header>
-<form method="post">
+<form action=" " method="post">
         {% csrf_token %}
 		<div class="register-box">
 			<label >用 户 名
-			<input maxlength="20" name="username" type="text" placeholder="您的用户名和登录名">
+			<input maxlength="20" type="text" name="username" placeholder="您的用户名和登录名">
 					</label>
+            <div class="tips">
+            </div>
 		</div>
 		<div class="register-box">
             <label >密   码
-			<input maxlength="20" name="password" type="password" placeholder="密码">
+			<input maxlength="20" type="password" name="password" placeholder="密码">
 					</label>
+            <div class="tips">
+            </div>
 		</div>
         <div class="register-box">
 				<label for="username" class="other_label">验 证 码
-			<input maxlength="20" name="identify" type="text" placeholder="请输入验证码">
+			<input maxlength="20" name="logidentify" type="text" placeholder="请输入验证码">
 			</label>
 				<span id="code"></span>
-				<div class="tips">
+				<div class="tips" id="identifyid">
 				</div>
 			</div>
 		<div class="submit_btn">
-			<button type="submit" id="login_submit_btn">登   录</button>
-			<a href="{% url 'register' %}">立即注册？</a>
+			{% if error %}
+            <p style="color: red;">{{ error }}</p>
+            {% endif %}
+            <button type="submit" id="login_submit_btn">登   录</button>
+
+            {% if success %}
+               <script language="javascript" type="text/javascript">
+                    alert("登录成功");
+                    window.location.href="{% url 'home' %}";
+               </script>
+            {% endif %}
 		</div>
+        <div>
+            <a  href="{% url 'register' %}">立即注册？</a> &#12288;&#12288;&#12288;&#12288;&#12288;
+            &#12288;&#12288;&#12288;&#12288;&#12288;&#12288;&#12288;&#12288;&#12288;&#12288;&#12288;&#12288;
+            <a href="{% url 'register' %}">忘记密码？</a>
+        </div>
     </form>
   </body>
 </html>
