--- a/templates/base.html
+++ b/templates/base.html
@@ -2,121 +2,135 @@
 <!doctype html>
 <html lang="zh">
 
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-		<title>{%block title%}{%endblock%}</title>
-		<link rel="stylesheet" type="text/css" href='{% static "css/bootstrap.min.css" %}'>
-		<link rel="stylesheet" type="text/css" href='{% static "css/font-awesome.min.css" %}'>
-		<link rel="stylesheet" type="text/css" href="{% static 'css/edua-icons.css' %}">
-		<link rel="stylesheet" type="text/css" href='{% static "css/animate.min.css" %}'>
-		<link rel="stylesheet" type="text/css" href='{% static "css/owl.carousel.css" %}'>
-		<link rel="stylesheet" type="text/css" href='{% static "css/owl.transitions.css" %}'>
-		<link rel="stylesheet" type="text/css" href='{% static "css/cubeportfolio.min.css" %}'>
-		<link rel="stylesheet" type="text/css" href='{% static "css/settings.css" %}'>
-		<link rel="stylesheet" type="text/css" href='{% static "css/bootsnav.css" %}'>
-		<link rel="stylesheet" type="text/css" href='{% static "css/style.css" %}'>
-		<link rel="stylesheet" type="text/css" href='{% static "css/loader.css" %}'>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <title>{% block title %}{% endblock %}</title>
+    <link rel="stylesheet" type="text/css" href='{% static "css/bootstrap.min.css" %}'>
+    <link rel="stylesheet" type="text/css" href='{% static "css/font-awesome.min.css" %}'>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/edua-icons.css' %}">
+    <link rel="stylesheet" type="text/css" href='{% static "css/animate.min.css" %}'>
+    <link rel="stylesheet" type="text/css" href='{% static "css/owl.carousel.css" %}'>
+    <link rel="stylesheet" type="text/css" href='{% static "css/owl.transitions.css" %}'>
+    <link rel="stylesheet" type="text/css" href='{% static "css/cubeportfolio.min.css" %}'>
+    <link rel="stylesheet" type="text/css" href='{% static "css/settings.css" %}'>
+    <link rel="stylesheet" type="text/css" href='{% static "css/bootsnav.css" %}'>
+    <link rel="stylesheet" type="text/css" href='{% static "css/style.css" %}'>
+    <link rel="stylesheet" type="text/css" href='{% static "css/loader.css" %}'>
 
-		<link rel="icon" href="{% static 'img/favicon.png' %}">
-        {% block css %}{% endblock %}
+    <link rel="icon" href="{% static 'img/favicon.png' %}">
+    {% block css %}{% endblock %}
 
-		<!--[if lt IE 9]>
+    <!--[if lt IE 9]>
   <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 <![endif]-->
-	</head>
+</head>
 
-	<body>
+<body>
 
-		<!--菜单栏-->
-		<header>
-			<nav class="navbar navbar-default navbar-fixed white no-background bootsnav">
-				<div class="container">
-					<div class="search_btn btn_common"><i class="icon-icons185"></i></div>
-					<div class="navbar-header">
-						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
-          <i class="fa fa-bars"></i>
-        </button>
-						<a class="navbar-brand" href=""><img src='{% static "img/logo-white.png" %}' alt="logo" class="logo logo-display">
-							<img src="{% static 'img/logo.png' %}" class="logo logo-scrolled" alt="logo">
-						</a>
-					</div>
-					<div class="collapse navbar-collapse" id="navbar-menu">
-						<ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOut">
-							<li>
-								<a href="{% url 'home' %}">首页</a>
-							</li>
-							<li class="dropdown">
-								<a href="#" class="dropdown-toggle" data-toggle="dropdown">课程</a>
-								<ul class="dropdown-menu">
-									<li>
-										<a href="{% url 'learn'  %}">Python基础课程</a>
-									</li>
-									<li>
-										<a href="{% url 'learn' %}">Python实战课程</a>
-									</li>
-								</ul>
-							</li>
-							<li class="dropdown">
-								<a href="{% url 'ide' %}">编程环境</a>
-							</li>
-							<li class="dropdown">
-								<a href="tool_display.html" class="dropdown-toggle" data-toggle="dropdown">网络运维工具集</a>
-							</li>
-                            <li class="dropdown">
-								<a href="{% url 'login' %}" class="dropdown-toggle" data-toggle="dropdown">登录/注册</a>
-							</li>
-						</ul>
-					</div>
-				</div>
-			</nav>
-		</header>
+<!--菜单栏-->
+<header>
+    <nav class="navbar navbar-default navbar-fixed white no-background bootsnav">
+        <div class="container">
+            <div class="navbar-header" style="background-color: transparent">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
+                    <i class="fa fa-bars"></i>
+                </button>
+                <a class="navbar-brand" href=""><img src='{% static "img/logo-white.png" %}' alt="logo"
+                                                     class="logo logo-display">
+                    <img src="{% static 'img/logo.png' %}" class="logo logo-scrolled" alt="logo">
+                </a>
+            </div>
+            <div class="collapse navbar-collapse" id="navbar-menu">
+                <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOut">
+                    <li>
+                        <a href="{% url 'home' %}">首页</a>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">课程</a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a href="{% url 'learn_basic' %}">Python基础课程</a>
+                            </li>
+                            <li>
+                                <a href="{% url 'learn_practice' %}">Python实战课程</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="{% url 'ide' %}">编程环境</a>
+                    </li>
+                    <li class="dropdown">
+                        <a href="tool_display.html" class="dropdown-toggle" data-toggle="dropdown">网络运维工具集</a>
+                    </li>
+                    <!-- Django的 if 模板语句 -->
+                    {% if user.is_authenticated %}
+                        <!-- 如果用户已经登录，则显示用户名下拉框 -->
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                {{ user.username }}
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <a class="dropdown-item" href='{% url "user_page" %}'>个人中心</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href='{% url "logout" %}'>退出</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <!-- 如果用户未登录，则显示 “登录” -->
+                    {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'login' %}">登录</a>
+                        </li>
+                        <!-- if 语句在这里结束 -->
+                    {% endif %}
+                </ul>
+            </div>
+        </div>
+    </nav>
+</header>
 
-		<!--搜索栏-->
-		<div id="search">
-			<button type="button" class="close">×</button>
-			<form>
-				<input type="search" value="" placeholder="请输入搜索内容" required/>
-				<button type="submit" class="btn btn_common blue">搜索</button>
-			</form>
-		</div>
 
-		<!--网页内容-->
-		{%block content %} {% endblock%}
 
-		<!--版权声名-->
-		<div class="copyright">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12 text-center">
-						<p>Copyright &copy; 2019.
-							<a href="http://www.happypython.com/" target="_blank">快乐学Python</a> All rights reserved.</p>
-					</div>
-				</div>
-			</div>
-		</div>
+<!--网页内容-->
+{% block content %} {% endblock %}
 
-		<script src='{% static "js/jquery-2.2.3.js" %}'></script>
-        <script src='{% static "js/bootsnav.js" %}'></script>
-        <script src='{% static "js/jquery.appear.js" %}'></script>
-        <script src='{% static "js/jquery-countTo.js" %}'></script>
-        <script src='{% static "js/jquery.parallax-1.1.3.js" %}'></script>
+<!--版权声名-->
+<div class="copyright">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <p>Copyright &copy; 2019.
+                    <a href="http://www.happypython.com/" target="_blank">快乐学Python</a> All rights reserved.</p>
+            </div>
+        </div>
+    </div>
+</div>
 
-		<script src='{% static "js/owl.carousel.min.js" %}'></script>
-		<script src='{% static "js/jquery.cubeportfolio.min.js" %}'></script>
-		<script src='{% static "js/jquery.themepunch.tools.min.js" %}'></script>
-		<script src='{% static "js/jquery.themepunch.revolution.min.js" %}'></script>
-		<script src='{% static "js/revolution.extension.layeranimation.min.js" %}'></script>
-		<script src='{% static "js/revolution.extension.navigation.min.js" %}'></script>
-		<script src='{% static "js/revolution.extension.parallax.min.js" %}'></script>
-		<script src='{% static "js/revolution.extension.slideanims.min.js" %}'></script>
-		<script src='{% static "js/revolution.extension.video.min.js" %}'></script>
-		<script src='{% static "js/wow.min.js" %}'></script>
-		<script src='{% static "js/functions.js" %}'></script>
+<script src='{% static "js/jquery-2.2.3.js" %}'></script>
+<script src='{% static "js/bootsnav.js" %}'></script>
+<script src='{% static "js/jquery.appear.js" %}'></script>
+<script src='{% static "js/jquery-countTo.js" %}'></script>
+<script src='{% static "js/jquery.parallax-1.1.3.js" %}'></script>
 
-	{% block js %}{% endblock %}
-    </body>
+<script src='{% static "js/owl.carousel.min.js" %}'></script>
+<script src='{% static "js/jquery.cubeportfolio.min.js" %}'></script>
+<script src='{% static "js/jquery.themepunch.tools.min.js" %}'></script>
+<script src='{% static "js/jquery.themepunch.revolution.min.js" %}'></script>
+<script src='{% static "js/revolution.extension.layeranimation.min.js" %}'></script>
+<script src='{% static "js/revolution.extension.navigation.min.js" %}'></script>
+<script src='{% static "js/revolution.extension.parallax.min.js" %}'></script>
+<script src='{% static "js/revolution.extension.slideanims.min.js" %}'></script>
+<script src='{% static "js/revolution.extension.video.min.js" %}'></script>
+<script src='{% static "js/wow.min.js" %}'></script>
+<script src='{% static "js/functions.js" %}'></script>
+
+{% block js %}{% endblock %}
+</body>
 
 </html>
