--- a/templates/login/register.html
+++ b/templates/login/register.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" type="text/css" href="{% static "css/styleDenglu.css" %}">
     <link rel="stylesheet" type="text/css" href='{% static "css/bootstrap.min.css" %}'>
 </head>
-<script src="{% static "js/jquery-1.12.4.min.js" %}" type="text/javascript" charset="utf-8"></script>
+{#<script src="{% static "js/jquery-1.12.4.min.js" %}" type="text/javascript" charset="utf-8"></script>#}
+<script src="{% static 'js/jquery-2.2.3.js' %}"></script>
 <script src="{% static "js/register.js" %}"></script>
 
 <body>
@@ -18,9 +19,18 @@
 </header>
 <form action="" id="form1" method="post">
     {% csrf_token %}
+    {% if error %}
+            <p style="color: red;">{{ error }}</p>
+        {% endif %}
+        {% if success %}
+           <script language="javascript" type="text/javascript">
+                alert("注册成功");
+                window.location.href="{% url 'login' %}";
+           </script>
+        {% endif %}
     <div class="register-box">
         <label for="username" class="username_label">用 户 名
-            <input maxlength="20" name="username" type="text" placeholder="您的用户名和登录名">
+            <input AutoComplete="Off" maxlength="20" name="username" type="text" placeholder="您的用户名和登录名">
         </label>
         <div class="tips">
 
@@ -34,16 +44,17 @@
             </select>
         </label>
         <label for="sex">年龄
-            <input maxlength="10" name="age" type="text" placeholder="请输入年龄">
+            <input AutoComplete="Off" maxlength="3" name="age" type="text" placeholder="请输入年龄">
         </label>
         <div class="tips">
 
         </div>
+
     </div>
 
     <div class="register-box">
         <label for="username" class="other_label">设 置 密 码
-            <input maxlength="20" name="password" type="password" placeholder="建议至少使用两种字符组合">
+            <input AutoComplete="Off" maxlength="20" name="password" type="password" placeholder="建议至少使用两种字符组合">
         </label>
         <div class="tips">
 
@@ -51,7 +62,7 @@
     </div>
     <div class="register-box">
         <label for="username" class="other_label">确 认 密 码
-            <input maxlength="20" name="password2" type="password" placeholder="请再次输入密码">
+            <input AutoComplete="Off" maxlength="20" name="password2" type="password" placeholder="请再次输入密码">
         </label>
         <div class="tips">
 
@@ -60,7 +71,7 @@
     <div class="register-box">
         <label for="username" class="other_label">
             <span>中国 0086∨</span>
-            <input class="phone" name="phone" maxlength="20" type="text" placeholder="建议使用常用手机">
+            <input AutoComplete="Off" class="phone" maxlength="11" name="phone" maxlength="20" type="text" placeholder="建议使用常用手机">
         </label>
         <div class="tips">
 
@@ -69,7 +80,7 @@
     <div class="register-box">
         <label for="username" class="other_label">
             <span>邮箱</span>
-            <input class="phone" name="email" maxlength="20" type="text" placeholder="建议使用常用邮箱">
+            <input AutoComplete="Off" class="phone" maxlength="50" name="email"  type="text" placeholder="建议使用常用邮箱">
         </label>
         <div class="tips">
 
@@ -77,7 +88,7 @@
     </div>
     <div class="register-box">
         <label for="username" class="other_label">验 证 码
-            <input maxlength="20" name="identify" type="text" placeholder="请输入验证码">
+            <input AutoComplete="Off" maxlength="20" name="identify" type="text" placeholder="请输入验证码">
         </label>
         <span id="code"></span>
         <div class="tips">
@@ -92,16 +103,8 @@
         </div>
     </div>
     <div class="submit_btn">
-        <button type="submit" id="submit_btn" onclick="register()">立 即 注 册</button>
-        {% if error %}
-            <p style="color: red;">{{ error }}</p>
-        {% endif %}
-        {% if success %}
-           <script language="javascript" type="text/javascript">
-                alert("注册成功");
-                window.location.href="{% url 'login' %}";
-           </script>
-        {% endif %}
+        <button type="submit" id="submit_btn" >立 即 注 册</button>
+
     </div>
     <div class="tips">
 
