--- a/hlPY/statics/css/styleDenglu.css
+++ b/hlPY/statics/css/styleDenglu.css
@@ -14,6 +14,7 @@ input{
     outline: none;
     border:none;
 
+
     
 }
 /*设定html和body的宽度为100%*/
@@ -127,9 +128,15 @@ form{
 .submit_btn button{
 	width: 100%;
     height: 54px;
-    color: #fff;
-    background: #e22;
+    background-color:red;
     border: 0;
-    font-size: 16px;
+    font-size: 20px;
+    color: white;
     font-family: "Microsoft YaHei","Hiragino Sans GB";
 }
+/*.submit_btn:active {*/
+/*  background-color: #3e8e41;*/
+/*  box-shadow: 0 5px black;*/
+/*  transform: translateY(4px);*/
+/*}*/
+
