--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -6,7 +6,8 @@
 <title>登录页面</title>
 <link rel="stylesheet" type="text/css" href="{% static "css/styleDenglu.css" %}">
 </head>
-<script src="{% static "js/jquery-1.12.4.min.js"%}" type="text/javascript" charset="utf-8"></script>
+{#<script src="{% static "js/jquery-1.12.4.min.js"%}" type="text/javascript" charset="utf-8"></script>#}
+<script src="{% static 'js/jquery-2.2.3.js' %}"></script>
 	<script src="{% static "js/login.js"%}"></script>
 <body>
     <header>
@@ -17,7 +18,7 @@
         {% csrf_token %}
 		<div class="register-box">
 			<label >用 户 名
-			<input maxlength="20" type="text" name="username" placeholder="您的用户名和登录名">
+			<input AutoComplete="Off" maxlength="20" type="text" name="username" placeholder="您的用户名和登录名">
 					</label>
             <div class="tips">
             </div>
@@ -31,7 +32,7 @@
 		</div>
         <div class="register-box">
 				<label for="username" class="other_label">验 证 码
-			<input maxlength="20" name="logidentify" type="text" placeholder="请输入验证码">
+			<input  AutoComplete="Off" maxlength="20" name="logidentify" id="123" type="text" placeholder="请输入验证码">
 			</label>
 				<span id="code"></span>
 				<div class="tips" id="identifyid">
@@ -46,7 +47,7 @@
             {% if success %}
                <script language="javascript" type="text/javascript">
                     alert("登录成功");
-                    window.location.href="{% url 'home' %}";
+                    window.location.href="{% url 'user_page' %}";
                </script>
             {% endif %}
 		</div>
