--- a/templates/user_page.html
+++ b/templates/user_page.html
@@ -7,31 +7,37 @@
 
 
 {% block js %}
+
+
     <script src="{% static 'js/jquery-2.2.3.js' %}"></script>
     <script src="{% static "js/user_page.js"%}"></script>
     <script src="{% static 'js/jquery-2.2.3.js' %}"></script>
     <script src="{% static 'js/echarts.min.js'%}"></script>
     <script src="{% static 'js/pie.js'%}"></script>
+            <script >
+        phonenumber ={{ user_info.phone|slice:":3" }}+"****"+{{ user_info.phone|slice:"7:" }};
+    </script>
  {% endblock %}
 {% block content %}
 
 
 
 
-<body style="width: 100%; height: 100%; font-family:'Source Sans Pro'" onload="Abc()" >    {# 页面刷新时执行函数Abc()
+<body style="width: 100%; height: 100%; font-family:'Source Sans Pro'" onload="Abc()" >    //页面刷新时执行函数Abc()
 <div style="height: 64px; min-height: 100%;width: auto; border:1px solid #000; " ></div>
 <div style="height: 100vh; width: auto; border:3px solid #000;margin-outside: 20px; color: honeydew" >
     <div class="right" style="float:right;height: auto; width: 80%; border:1px solid #ff0000;background-color:#2D2C2C" >
         <div style="height:80%; width: 100%; border:1px solid green" >
         <table id="course" style="width: 80%;text-align:center ">
         <tr >
-            <th style="text-align:center!important;" > 课 程 名</th>
+            <th style="text-align:center!important; " > 课 程 名</th>
             <th style="text-align:center!important;" > 学 习 进 度</th>
             <th style="text-align:center!important;" >  学 习 时 长 </th>
             <th style="text-align:center!important;" >  学 习 状 态 </th>
         </tr>
         {% for i in basic_course_info %}
-            {% if  i.rate not in "100.0%" %}
+            {% if  i.rate != "100%" %}
+
             <tr border="0.1" >
 {#                 课程名称#}
                 <td >{{i.basic_course_name}}</td>
@@ -42,11 +48,20 @@
 {#                 //课程进度#}
                 <td  class="yuan" style="height:100px; width:80px ;border: black solid 0px" ></td>
 {#                 某课程课程学习时长#}
-                <td >{{i.basic_course_time}}</td>
-                <td >
-                    <a class="stduy" href="{% url 'learn_basic' %}">继续学习</a>
-                </td>
+                <td>{{ i.basic_course_time }} </td>
+
+            <td>
+
+                 <form   action="{% url 'user_course_locate' %} " method="post">
+                    {% csrf_token %}
+                     <input style="display: none" name="course_name" value={{i.basic_course_name}} >
+               <input style="display: none" name="course_id" value={{i.basic_course_id}}>
+               <input style="display: none" name="type" value={{i.type}}>
+               <button type="submit"> 开始学习</button>
+               </form>
+            </td>
               </tr>
+
         {% endif %}
             {% endfor %}
         </table>
@@ -68,15 +83,23 @@
         </tr>
             {% for i in basic_course_info %}
 
-                {% if  i.rate in "100.0%" %}
+                {% if  i.rate == "100%" %}
             <tr border="0.1">
                 <td >{{i.basic_course_name}}</td>
                 <td style="display: none"  class="rate">{{ i.rate }}</td>
                 <td style="display: none"  class="course_name">{{ i.basic_course_name }}</td>
                 <td  class="yuan" style="height:100px; width:80px ;border: black solid 0px"  ></td>
-                <td>
-                    <a class="stduy" href="{% url "learn_basic" %}">继续学习</a>
-                </td>
+                <td>{{ i.basic_course_time }}</td>
+
+            <td>
+                <form   action="{% url 'user_course_locate' %} " method="post">
+                    {% csrf_token %}
+                <input style="display: none" name="course_name" value={{i.basic_course_name}} >
+               <input style="display: none" name="course_id" value={{i.basic_course_id}}>
+               <input style="display: none" name="type" value={{i.type}}>
+               <button type="submit"> 开始学习</button>
+               </form>
+            </td>
               </tr>
                 {% endif %}
             {% endfor %}
@@ -95,20 +118,19 @@
         <div class="for" style="height: 85%; width: auto; border:1px solid yellow; ">
             <ul>
 
-                <li style="list-style-type:none">用户名 {{ user_info.username }}</li>
-                <li style="list-style-type:none">性别 {{ user_info.sex }}</li>
-                <li style="list-style-type:none">年龄{{ user_info.age }}</li>
-                <li style="list-style-type:none">手机号 {{ user_info.phone }}</li>
-                <li style="list-style-type:none">邮箱 {{ user_info.email}}</li>
-                <li style="list-style-type:none">总学习时长 {{ user_info.email}}</li>
+                <li style="list-style-type:none">用户名: {{ user_info.username }}</li>
+                <li style="list-style-type:none">学习时长: {{ user_info.learn_time }}</li>
+                <li style="list-style-type:none">性别: {{ user_info.sex }}</li>
+                <li style="list-style-type:none">年龄:{{ user_info.age }}</li>
+                <li style="list-style-type:none">手机号: {{ user_info.phone }}</li>
+                <li style="list-style-type:none">邮箱: {{ user_info.email}}</li>
+
             </ul>
             <ul style="text-align: center">
                 <button id="changeinfo" style="position: center">修改信息</button>
             </ul>
             <form id="change" action="{% url  "user_info_modify"%}" style="display: none" method="post">
                 {% csrf_token %}
-
-
                     <div class="register-box">
                     <label for="username" class="username_label">用 户 名 {{ user_info.username }}
                     </label>
@@ -123,11 +145,6 @@
                     <div class="tips">
                     </div>
                 </div>
-
-
-
-
-
                 <div class="register-box">
                     <label for="username" class="other_label">新 密 码&#8197;&#12288;
                         <input style="color: white" maxlength="20" name="password" type="password" placeholder="若不修改，无需填写">
@@ -168,6 +185,7 @@
                 <button type="submit"; id="changeback";>返回</button>
                 </div>
             </div>
+
                 {% if error %}
 
                     <script language="javascript" type="text/javascript">
@@ -195,6 +213,5 @@
 
 </body>
 {%endblock%}
-
 
 
